Resolved feedback issues on mobile version

--- a/dimagi/pages/static/style/pages/pillar/community_health_worker.scss
+++ b/dimagi/pages/static/style/pages/pillar/community_health_worker.scss
@@ -225,8 +225,7 @@ a:not(.button).tile-more {
 }
 
 .section-header span {
-  font-size: 57px !important;
-  line-height: 72px !important;
+  line-height: 50px !important;
   font-weight: 700 !important;
 }
 
